[build-system]
requires = [
    "hatchling>=1.27",
    "hatch-vcs>=0.4",
]
build-backend = "hatchling.build"

[project]
name = "kivy_garden.ebs.progressspinner"
dynamic = ["version"]

description = "Fork of kivy-garden progress spinner"
readme = "README.md"
license = { file = "LICENSE.txt" }

authors = [
    { name = "Kathryn Taylee", email =  "kived@github.com" },
    { name = "Chintalagiri Shashank", email = "shashank.chintalagiri@gmail.com" },
]

requires-python = ">=3.10"

dependencies = [
    "kivy>=2.3"
]

keywords = [
    "kivy",
    "kivy-garden",
    "widgets",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

dev = [
    "ruff",
    "build",
    "twine",
    "hatch",
    "hatch-vcs"
]

ci = [
    "coveralls",
]

[project.urls]
Homepage = "https://github.com/ebs-universe/kivy_garden.ebs.progressspinner"
Issues = "https://github.com/ebs-universe/kivy_garden.ebs.progressspinner/issues"
Source = "https://github.com/ebs-universe/kivy_garden.ebs.progressspinner"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
exclude = [
    "/build",
    "/dist",
    "/.git",
    "/.github",
    "/.pytest_cache",
    "/.ruff_cache",
    "/**/__pycache__",
    "/**/*.pyc",
]

[tool.hatch.build.hooks.vcs]
version-file = "src/kivy_garden/ebs/progressspinner/_generated_version.py"

[tool.hatch.build.targets.wheel]
packages = [
    "src/kivy_garden",
]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE.txt",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
ignore = [
    "E402",
    "E731",
    "E741",
    "F401",
    "F841",
]
